--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "info.androidhive.androidcamera"
+        //applicationId "info.androidhive.androidcamera"
+        applicationId "com.tablescanner.app"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
@@ -29,4 +30,6 @@ dependencies {
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
     // dexter runtime permissions
     implementation 'com.karumi:dexter:4.2.0'
+    implementation 'br.com.simplepass:loading-button-android:1.7.2'
+    implementation 'com.android.support:cardview-v7:27.1.1'
 }
